<resources>
    <string name="app_name">SubRedditor</string>
    <string name="package_name">com.guanqing.subredditor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_webview">SubRedditor Browser</string>

    <!-- Main fragment refresh strings -->
    <string name="pulldown_refresh_text">pull to refresh</string>
    <string name="release_refresh_text">release to refresh</string>
    <string name="refreshing_text">loading&#8230;</string>
    <string name="loading_more_text">loading more&#8230;</string>

    <!-- Strings related to login -->
    <string name="client_id">p6NSlEAAL8HerQ</string>
    <string name="redirect_url">http://haoguanqing.github.io/Tests-Misc-for-Android/</string>

    <string name="prompt_username">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The password does not match username</string>
    <string name="error_field_required">This field is required</string>
    <string name="logging_in">Logging in&#8230;</string>

    <!-- feed contract -->
    <string name="CONTENT_AUTHORITY">com.guanqing.subredditor</string>

</resources>
